assets/css/components/ads.css
.RandomName {
  background-color: light-dark(#fffafd, #322d2f);
  border: 2px solid light-dark(rgb(0 0 0 / 0.1), rgb(255 255 255 / 0.1));
  border-radius: 1em;
  corner-shape: squircle;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  gap: 2em;
  margin: 0 auto var(--vb-1\/2);
  padding: 1em;
}

/**
 * 1. If the ad is at the top of the content (and not sandwiched between other
 *    content blocks), increase its spacing.
 */
.TableOfContents:first-child + .RandomName {
  margin-bottom: var(--vb); /* 1 */
}

.RandomName__content {
  position: relative;
  display: flex;
}

.RandomName__content::before {
  content: "";
  display: block;
  height: 4px;
  border-radius: 2px;
  top: -1em;
  right: 0;
  left: 0;
  position: absolute;
  background-image: linear-gradient(to right, var(--blue), var(--pink));
}

.RandomName__content > * {
  font-size: 80%;
  margin: auto;
}

@media (min-width: 600px) {
  /**
   * If the ad is not next to the table of contents, shift its layout early
   * since it has enough room for 2 columns.
   */
  :not(.TableOfContents) + .RandomName,
  .RandomName:first-child {
    flex-direction: row;
  }

  :not(.TableOfContents) + .RandomName .RandomName__content::before,
  .RandomName:first-child .RandomName__content::before {
    width: 4px;
    height: auto;
    top: 0;
    bottom: 0;
    left: -1em;
    background-image: linear-gradient(to bottom, var(--blue), var(--pink));
  }
}

@media (min-width: 1140px) {
  /**
   * If the ad is next to the table of contents, shift its layout late since it
   * has less room for 2 columns before the ToC goes floating.
   */
  .TableOfContents + .RandomName {
    flex-direction: row;
  }

  .TableOfContents + .RandomName .RandomName__content::before {
    width: 4px;
    height: auto;
    top: 0;
    bottom: 0;
    left: -1em;
    background-image: linear-gradient(to bottom, var(--blue), var(--pink));
  }
}

/**
 * Site advertisement
 * 1. Computed height to minimise CLS.
 */
.RandomName__holder {
  width: max-content;
  max-width: 100%;
  min-height: 114px; /* 1 */
  min-width: 284px;
  background-color: light-dark(white, #222);
  color: #444;
  margin: 0 auto;
}

.RandomName__holder:not(:has(#carbonads)) {
  box-shadow: inset 0 0 0 1px rgb(0 0 0 / 0.1);
  --stripe-color: rgb(0 0 0 / 0.1); /* 4 */
  background-image: repeating-linear-gradient(
    -45deg,
    transparent,
    transparent 0.15em,
    var(--stripe-color) 0.15em,
    var(--stripe-color) 0.3em
  ); /* 4 */
}

@media screen and (min-width: 1556px) {
  .RandomName {
    display: contents;
  }

  .RandomName__content {
    display: none;
  }

  .RandomName__holder {
    position: fixed;
    bottom: 0.5em;
    left: 1em;
    min-height: 0;
    z-index: 100;
  }
}

#carbonads {
  display: flex;
  max-width: 330px;
}

#carbonads a {
  color: inherit;
  text-decoration: none;
  background-image: none;
}

#carbonads a:hover {
  color: inherit;
}

#carbonads span {
  position: relative;
  display: block;
  overflow: hidden;
}

#carbonads .carbon-wrap {
  display: flex;
  border: 1px solid rgb(0 0 0 / 0.1);
}

#carbonads .carbon-img {
  display: block;
  margin: 0;
  line-height: 1;
}

#carbonads .carbon-img img {
  display: block;
  margin: 0;
}

#carbonads .carbon-text {
  font-size: 13px;
  padding: 10px;
  margin-bottom: 16px;
  line-height: 1.5;
  text-align: left;
}

#carbonads .carbon-poweredby {
  display: block;
  padding: 6px 8px;
  background: #f1f1f2;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 0.5px;
  font-weight: 600;
  font-size: 8px;
  line-height: 1;
  border-top-left-radius: 3px;
  position: absolute;
  bottom: 0;
  right: 0;
}

